--- a/natours/index.html
+++ b/natours/index.html
@@ -27,7 +27,7 @@
             </div>
 
         </header>
-
+        <!-- grid
         <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
@@ -95,6 +95,7 @@
                 </div>
             </div>
         </section>
+    -->
         
     </body>
 </html>
