--- a/natours/index.html
+++ b/natours/index.html
@@ -30,7 +30,7 @@
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exiciting tours for adventurous people
                     </h2>
@@ -38,7 +38,19 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est dignissimos iure amet doloribus, vitae optio eaque alias odit porro quidem, exercitationem quas excepturi. Ipsum facilis ab quisquam sit vel inventore.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you have never before</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam officia fugiat aliquam fuga ratione aspernatur voluptatum soluta veniam officiis consequuntur omnis ad iste, et ut nesciunt, quo corrupti sapiente provident.
+                        </p>
+
+                        <a href="#" class="btn-text">
+                            Learn more &rarr;
+                        </a>
                     </div>
                     <div class="col-1-of-2">
                         image composition
