--- a/natours/index.html
+++ b/natours/index.html
@@ -226,12 +226,34 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="/img/nat-8.jpg" alt="person on a tour" class="story__image">
+                            <figcaption class="story__caption">
+                                Mary Smith
+                            </figcaption> 
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus magni molestias, harum quaerat cupiditate exercitationem voluptatum. Adipisci temporibus voluptas eaque beatae possimus nostrum.</p>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="/img/nat-9.jpg" alt="person on a tour" class="story__image">
+                            <figcaption class="story__caption">
+                                Jack Wilson
+                            </figcaption> 
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus magni molestias, harum quaerat cupiditate exercitationem voluptatum. Adipisci temporibus voluptas eaque beatae possimus nostrum.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
