--- a/natours/index.html
+++ b/natours/index.html
@@ -264,6 +264,31 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+                                <div class="form_group">
+                                    <input type="text" class="form__input" placeholder="Full Name" required id="name">
+                                    <label for="name" class="form_label">Full name</label>
+                                </div>
+
+                                <div class="form_group">
+                                    <input type="email" class="form__input" placeholder="Email address" required id="email">
+                                    <label for="email" class="form_label">Email address</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- grid
         <section class="grid-test">
