--- a/natours/index.html
+++ b/natours/index.html
@@ -275,14 +275,14 @@
                                         Start booking now
                                     </h2>
                                 </div>
-                                <div class="form_group">
+                                <div class="form__group">
                                     <input type="text" class="form__input" placeholder="Full Name" required id="name">
-                                    <label for="name" class="form_label">Full name</label>
+                                    <label for="name" class="form__label">Full name</label>
                                 </div>
 
-                                <div class="form_group">
+                                <div class="form__group">
                                     <input type="email" class="form__input" placeholder="Email address" required id="email">
-                                    <label for="email" class="form_label">Email address</label>
+                                    <label for="email" class="form__label">Email address</label>
                                 </div>
                             </form>
                         </div>
