--- a/natours/index.html
+++ b/natours/index.html
@@ -362,6 +362,23 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab perferendis cumque laborum distinctio exercitationem. Deserunt totam necessitatibus similique non sed repellendus rerum fugit incidunt? Commodi doloribus obcaecati ratione facere nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ab tempora illum quasi accusantium temporibus beatae consequatur rem minima dolores facere tempore error labore voluptatibus eius nesciunt in, numquam impedit.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
         <!-- grid
         <section class="grid-test">
             <div class="row">
